--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-pai">
         <header class="cabecalho">
           <input type="text" name="text" id="input-text" class="input-text" maxlength="500" placeholder="Digite seu cálculo aqui" required>
-          <textarea name="result" id="result" class="result" placeholder="Resultado"></textarea>
+          <textarea name="result" id="result" class="result" placeholder="Resultado" readonly></textarea>
         </header> 
         
         <div class="container-button">
@@ -43,9 +43,9 @@
           </div>
 
     <footer class="rodape">
-      <button type="button" class="btn" id="configIcon"><img src="img/config_Icon.png" alt="ícone de Engrenagem"></button>
-      <div class="logo"><img src="img/Logo.png" alt="Logotipo de Olho"></div>
-      <button type="button" class="btn" id="themeIcon"><img src="img/theme_Icon.png" alt="ícone de um Sol e uma Lua"></button>
+      <button type="button" class="btn" id="configIcon"><img src="img/config_Icon_standard.png" alt="ícone de Engrenagem"></button>
+      <div class="logo"><img src="img/Logo-standard.png" alt="Logotipo de Olho"></div>
+      <button type="button" class="btn" id="themeIcon"><img src="img/theme_Icon_standard.png" alt="ícone de um Sol e uma Lua"></button>
     </footer>
 
     <p class="marca">Cl<span>i</span>ck</p>
