UPDATE: Deixando botões de zoom funcionais no JS e adicionando link de página guia no HTML

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li><span class="item-bg" id="zoomIn"><img src="img/increaseZoomIcon_standard.png" alt="Ícone de ajustar o Zoom"> Aumentar Zoom</span></li>
           <li><span class="item-bg" id="zoomOut"><img src="img/decreaseZoomIcon_standard.png" alt="Ícone de ajustar o Zoom"> Diminuir Zoom</span></li>
           <li><span class="item-bg" id="questionIcon"><img src="img/questionIcon_standard.png" alt="Ícone de dúvida"> Dúvidas comuns</span></li>
-          <li><span class="item-bg" id="infoIcon"><img src="img/infoIcon_standard.png" alt="Ícone de informações"> Mais informações</span></li>
+          <li><a href="https://madusales.github.io/guia_ExtensaoAcessivel/" target="_blank" rel="noopener noreferrer"><span class="item-bg" id="infoIcon"><img src="img/infoIcon_standard.png" alt="Ícone de informações"> Mais informações</span></li></a>
         </ul>
 
       </div>
